--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3376,11 +3376,12 @@ input, select, textarea {
 				padding: 0.5em 0 0 0;
 			}
 
-				#menu ul > li:first-child {
-					border-top: 0 !important;
-					margin-top: 0 !important;
-					padding-top: 0 !important;
-				}
+			#menu ul > li > ul > li{
+				border-top: solid 0px rgba(0, 0, 0, 0.125);
+				margin: 0.5em 0 0 0;
+				padding: 0 0 0 0;
+				margin-left: 1em;
+			}
 
 				#menu ul > li > a {
 					border: 0;
